<resources>
    <string name="app_name">Training Diary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="chest">Chest</string>
    <string name="waist">Waist</string>
    <string name="leg">Leg</string>
    <string name="biceps">Biceps</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="no_measurements">You have no measurements</string>
    <string name="no_measurements_add">Add a measurement +</string>
    <string name="date">Date</string>
    <string name="comment">Comment</string>
    <string name="weight">Weight</string>
    <string name="hip_left">Left hip</string>
    <string name="hip_right">Right hip</string>
    <string name="shin_left">Left shin</string>
    <string name="neck">Neck</string>
    <string name="right_forearm">Right forearm</string>
    <string name="left_forearm">Left forearm</string>
    <string name="biceps_right">Right biceps</string>
    <string name="biceps_left">Left biceps</string>
    <string name="shin_right">Right shin</string>
    <string name="measurement_new">New measurement</string>
    <string name="measurement_edit">Edit measurement</string>
    <string name="no_comment">No comment</string>
    <string name="measurements">Measurements</string>
    <string name="comment_dialog_hint">ex. before/after workout</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="birth_date">Birth date</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="statistics">Statistics</string>
    <string name="exercises">Exercises</string>
    <string name="profile">Profile</string>
    <string name="trainings">Trainings</string>
    <string name="no_exercises">You have no exercises</string>
    <string name="no_workouts">You have no workouts</string>
    <string name="no_workouts_add">Add a workout +</string>
    <string name="workouts">Workouts</string>
    <string name="back">Back</string>
    <string name="back_description">Description</string>
    <string name="brachialis">Brachialis</string>
    <string name="biceps_description">Description</string>
    <string name="biceps_short_head">Biceps short head</string>
    <string name="biceps_long_head">Biceps long head</string>
    <string name="triceps">Triceps</string>
    <string name="triceps_description">Description</string>
    <string name="triceps_lateral_head">Lateral head</string>
    <string name="triceps_medial_head">Meadial head</string>
    <string name="triceps_long_head">Long head</string>
    <string name="chest_description">Description</string>
    <string name="pectoralis_minor">Pectoralis Minor</string>
    <string name="pectoralis_major">Pectoralis Major</string>
    <string name="shoulders">Shoulders</string>
    <string name="shoulders_description">Description</string>
    <string name="shoulder_anterior_head">Anterior head</string>
    <string name="shoulder_middle_head">Middle head</string>
    <string name="shoulder_posterior_head">Posterior head</string>
    <string name="trapezius">Trapezius</string>
    <string name="bench_press">Bench Press</string>
    <string name="squats">Squats</string>
    <string name="thigs">Thighs</string>
    <string name="thighs_description">Description</string>
    <string name="quadriceps">Quadriceps</string>
    <string name="hamstrings">Hamstrings</string>
    <string name="hamstrings_description">Descriptions</string>
    <string name="biceps_femoris">Biceps Femoris</string>
    <string name="semitendinosus">Semitendinosus</string>
    <string name="semimembranosus">Semimembranosus</string>
    <string name="glutes">Glutes</string>
    <string name="glutes_description">Description</string>
    <string name="gluteus_maximus">Gluteus Maximus</string>
    <string name="gluteus_medius">Gluteus Medius</string>
    <string name="erector_spinae">Erector Spinae</string>
    <string name="deadlift">DeadLift</string>
    <string name="latissimus_dorsi">Latissimus Dorsi</string>
    <string name="teres_minor">Teres Minor</string>
    <string name="teres_major">Teres Major</string>
    <string name="infraspinatus">Infraspinatus</string>
    <string name="rhomboid_major">Rhomboid Major</string>
    <string name="pull_ups">Pull-ups</string>
    <string name="description">Description</string>
    <string name="technique">Technique</string>
    <string name="coming_soon">Coming soon</string>
    <string name="birth_date_slide_description">Enter your birth date</string>
    <string name="no_statistics">You have no statistics</string>
    <string name="exercises_selection">Exercises selection</string>
</resources>