<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_features"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_trainings"
            android:icon="@drawable/table_large"
            android:title="@string/trainings" />
        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/dumbbell"
            android:title="@string/exercises" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/chart_areaspline"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_measurements"
            android:icon="@drawable/ruler"
            android:title="@string/measurements" />
    </group>
    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />
    </group>
</menu>
